[tool.poetry]
name = "flask-kettle"
version = "0.1.0"
description = ""
authors = ["PavelMoiseev <moiseevpvw@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_kettle"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
logging = "^0.4.9.6"
autopep8 = "^2.0.1"
requests = "^2.28.2"
flasgger = "^0.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
